WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
164671
Web Automation: terminate the automation session if the web process crashes
https://bugs.webkit.org/show_bug.cgi?id=164671
Summary
Web Automation: terminate the automation session if the web process crashes
Blaze Burg
Reported
2016-11-11 18:59:02 PST
,
Attachments
Proposed Fix
(4.02 KB, patch)
2016-11-11 19:13 PST
,
Blaze Burg
no flags
Details
Formatted Diff
Diff
For EWS
(3.94 KB, patch)
2016-11-11 20:32 PST
,
Blaze Burg
no flags
Details
Formatted Diff
Diff
For EWS
(3.95 KB, patch)
2016-11-12 12:29 PST
,
Blaze Burg
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Blaze Burg
Comment 1
2016-11-11 18:59:08 PST
<
rdar://problem/29028964
>
Blaze Burg
Comment 2
2016-11-11 19:13:36 PST
Created
attachment 294581
[details]
Proposed Fix
WebKit Commit Bot
Comment 3
2016-11-11 19:14:46 PST
Attachment 294581
[details]
did not pass style-queue: ERROR: Source/WebKit2/UIProcess/WebPageProxy.cpp:5291: Multi line control clauses should use braces. [whitespace/braces] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Joseph Pecoraro
Comment 4
2016-11-11 19:20:34 PST
Comment on
attachment 294581
[details]
Proposed Fix View in context:
https://bugs.webkit.org/attachment.cgi?id=294581&action=review
> Source/WebKit2/UIProcess/Automation/WebAutomationSession.cpp:143 > + Inspector::FrontendChannel* channel = nullptr; > + std::swap(channel, m_remoteChannel); > + if (channel) > + m_frontendRouter->disconnectFrontend(channel);
This swap seems overkill. I'd rather make it easy to search for "m_remoteChannel =". Perhaps: if (Inspector::FrontendChannel* channel = m_remoteChannel) { m_remoteChannel = nullptr; m_frontendRouter->disconnectFrontend(channel); }
> Source/WebKit2/UIProcess/WebPageProxy.cpp:5291 > + if (m_controlledByAutomation)
Style: Braces
Blaze Burg
Comment 5
2016-11-11 20:32:45 PST
Created
attachment 294588
[details]
For EWS
WebKit Commit Bot
Comment 6
2016-11-11 20:33:43 PST
Attachment 294588
[details]
did not pass style-queue: ERROR: Source/WebKit2/UIProcess/WebPageProxy.cpp:5291: Multi line control clauses should use braces. [whitespace/braces] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Joseph Pecoraro
Comment 7
2016-11-11 20:59:04 PST
Comment on
attachment 294588
[details]
For EWS View in context:
https://bugs.webkit.org/attachment.cgi?id=294588&action=review
> Source/WebKit2/UIProcess/WebPageProxy.cpp:5291 > + if (m_controlledByAutomation)
Style still.
Blaze Burg
Comment 8
2016-11-12 12:29:47 PST
Created
attachment 294626
[details]
For EWS
WebKit Commit Bot
Comment 9
2016-11-12 14:27:40 PST
Comment on
attachment 294626
[details]
For EWS Clearing flags on attachment: 294626 Committed
r208657
: <
http://trac.webkit.org/changeset/208657
>
WebKit Commit Bot
Comment 10
2016-11-12 14:27:44 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug