Web Automation: terminate the automation session if the web process crashes https://bugs.webkit.org/show_bug.cgi?id=164671 <rdar://problem/29028964>

Reviewed by Joseph Pecoraro.

* UIProcess/Automation/WebAutomationSession.h:
* UIProcess/Automation/WebAutomationSession.cpp:
(WebKit::WebAutomationSession::disconnect):
(WebKit::WebAutomationSession::terminate):
Factor out code that disconnects the remote, unpairs, and notifies the client.
Then, expose terminate() which can be called without a FrontendChannel.
Calling this causes the _WKAutomationDelegate to clear the local-side session in the
browser, and disconnecting from the remote will hang up the remote-side session.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::processDidCrash):
Terminate the session.


Canonical link: https://commits.webkit.org/182375@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208657 268f45cc-cd09-0410-ab3c-d52691b4dbfc